--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
         <button class="button">Get Stared</button>
       </section>
 
-      <section class="padding-block-700 | bg-accen-400 text-neutral-100">
+      <section class="cta | padding-block-900 | bg-accen-400 text-neutral-100">
         <div class="container">
-          <div class="even-columns">
+          <div class="even-columns | vertical-align-center">
             <div>
               <p class="fs-secondary-heading fw-bold">
                 Simplify how your team works today.
               </p>
             </div>
-            <div>
-              <button class="button" data-type="inverted">Get Started</button>
+            <div class="justify-self-end-md">
+              <button class="button " data-type="inverted">Get Started</button>
             </div>
           </div>
         </div>
