--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <header class="primary-header">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="#"><img src="/images/logo.svg" alt="" /></a>
+          <a href="#">
+            <svg class="icon" width="146" height="24">
+              <use xlink:href="images/logo.svg#logo"></use>
+            </svg>
+          </a>
           <button
             class="mobile-nav-toggle"
             aria-controls="primary-navigation"
@@ -145,21 +149,45 @@
       </section>
     </main>
 
-    <footer class="padding-block-700 | bg-neutral-900 text-neutral-100">
+    <footer class="primary-footer | padding-block-700 | bg-neutral-900 text-neutral-100">
       <div class="container">
-        <div class="even-columns">
-          <div>
-            <a href="#"><img src="/images/logo.svg" alt="" /></a>
-            <ul role="list" aria-label="social links">
-              <li><a aria-label="facebook" href="#"></a></li>
-              <li><a aria-label="youtube" href="#"></a></li>
-              <li><a aria-label="twitter" href="#"></a></li>
-              <li><a aria-label="printerest" href="#"></a></li>
-              <li><a aria-label="instagram" href="#"></a></li>
+        <div class="primary-footer-wrapper">
+          <div class="primary-footer-logo-social">
+            <a href="#">
+              <svg class="icon" width="146" height="24">
+                <use xlink:href="images/logo.svg#logo"></use>
+              </svg>
+            </a>
+            <ul class="social-list" role="list" aria-label="social links">
+              <li><a aria-label="facebook" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-facebook"></use>
+                </svg>
+              </a></li>
+              <li><a aria-label="youtube" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-youtube"></use>
+                </svg>
+              </a></li>
+              <li><a aria-label="twitter" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-twitter"></use>
+                </svg>
+              </a></li>
+              <li><a aria-label="printerest" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
+                </svg>
+              </a></li>
+              <li><a aria-label="instagram" href="#">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-instagram"></use>
+                </svg>
+              </a></li>
             </ul>
           </div>
 
-          <div>
+          <div class="primary-footer-nav">
             <nav class="footer-nav">
               <ul class="flow" style="--flow-spacer:1em" aria-label="Footer" role="list">
                 <li><a href="#">Home</a></li>
@@ -173,10 +201,10 @@
             </nav>
           </div>
 
-          <div>
+          <div class="primary-footer-form">
             <form action="">
               <input type="email" />
-              <button class="button">Go</button>
+              <button class="button" data-shadow="none">Go</button>
             </form>
             <p>Copyright 2020. All Rights Reserved</p>
           </div>
