--- a/index.html
+++ b/index.html
@@ -29,12 +29,6 @@
             aria-controls="primary-navigation"
             aria-expanded="false"
           >
-            <img
-              class="icon-hamburger"
-              src="/images/icon-hamburger.svg"
-              alt=""
-            />
-            <img class="icon-close" src="/images/icon-close.svg" alt="" />
             <span class="visually-hidden">Menu</span>
           </button>
           <nav class="primary-navigation" id="primary-navigation">
@@ -54,7 +48,7 @@
     </header>
 
     <main>
-      <section class="padding-block-900">
+      <section class="hero | text-center-sm-only | padding-block-900">
         <div class="container">
           <div class="even-columns">
             <div class="flow">
@@ -67,18 +61,18 @@
               </p>
               <button class="button">Get Started</button>
             </div>
-            <div>
-              <img src="/images/illustration-intro.svg" alt="" />
+            <div class="hero__image">
+              <img class="mx-auto" src="/images/illustration-intro.svg" alt="" />
             </div>
           </div>
         </div>
       </section>
 
-      <section class="padding-block-900">
+      <section class="sales-points | padding-block-900">
         <div class="container">
           <div class="even-columns">
             <div class="flow text-center-sm-only | margin-bottom-700" style="--flow-spacer:1.5rem">
-              <h2 class="fs-secondary-heading fw-bold">
+              <h2 class="sales-points__blog | fs-secondary-heading fw-bold">
                 What's different about Manage?
               </h2>
               <p>
